Fixing home meta data and background image on mobile

--- a/website_frontend/src/pages/Home.module.css
+++ b/website_frontend/src/pages/Home.module.css
@@ -261,3 +261,10 @@
         flex-wrap: wrap;
     }
 }
+
+
+@media only screen and (max-width: 768px) {
+    .sectionOne {
+        background-position: 30%;
+    }
+}
